Refactoring tests for OpenAiOAuth2Settings